--- a/client/src/pages/Home/productHome.scss
+++ b/client/src/pages/Home/productHome.scss
@@ -1,213 +1,3 @@
-// // @import '../../styles/_variables.scss';
-// // @import '../../styles/_mixins.scss';
-// // @import '../../styles/_global.scss';
-
-// // .product {
-// //     width: 100%;
-// //     padding: 1rem;
-// // }
-
-// // .table-responsive {
-// //     // margin: 0 auto;
-// //     width: 100%;
-// //     // padding: 0;
-// //     // border-collapse: collapse;
-
-// //     border: 1px solid $color-primary;
-// //     // max-width: fit-content;
-// //     // height: auto;
-// // }
-
-// // .table-responsive Td .TdBefore {
-// //     display: none;
-// // }
-
-// // .table-developer {
-// //     padding: 0;
-// //     // font-size: 12px;
-
-// //     @include tablet {
-// //         display: table-caption;
-// //         padding: 16px;
-// //         width: 100%;
-// //         border: none;
-// //         font-size: 1rem;
-// //         text-align: justify;
-// //     }
-// // }
-// // th {
-// //     background-color: $color-primary-light;
-// //     color: $color-primary;
-// //     display: flex;
-// //     justify-content: center;
-// // }
-
-// // tr:nth-child(even) {
-// //     background-color: $color-secondary;
-// // }
-
-// // tr {
-// //     border: 1px solid $color-primary;
-// //     /* padding: .125rem; */
-// //     display: table-row;
-// // }
-
-// // th {
-// //     border: 1px solid $color-primary;
-// //     padding: .125rem;
-// //     display: table-cell;
-// //     padding: .1875rem;
-// // }
-
-// // td {
-// //     border: 1px solid $color-primary;
-// //     padding: .125rem;
-// //     display: table-cell;
-// //     padding: 1em;
-// // }
-
-// @import '../../styles/_variables.scss';
-// @import '../../styles/_global.scss';
-
-// .product {
-//   width: 100%;
-//   padding: 1rem;
-// }
-
-// .table-responsive {
-//   width: 100%;
-//   border: 1px solid $color-primary;
-// }
-
-// .table-developer {
-//   padding: 0;
-
-//   @media screen and (min-width: 768px) {
-//     // display: table-caption;
-//     padding: 16px;
-//     width: 100%;
-//     border: none;
-//     font-size: 1rem;
-//     text-align: justify;
-//   }
-// }
-
-// .table-header {
-//   background-color: $color-primary-light;
-//   color: $color-primary;
-// //   display: flex;
-// //   justify-content: center;
-//   border: 1px solid $color-primary;
-//   padding: .125rem;
-// }
-
-// .table-data {
-//   border: 1px solid $color-primary;
-//   padding: .125rem;
-// //   display: table-cell;
-//   padding: 1em;
-
-//   &:nth-child(even) {
-//     background-color: $color-secondary;
-//   }
-// }
-
-// .table-row {
-//   border: 1px solid $color-primary;
-//   display: table-row;
-//   /* padding: .125rem; */
-// }
-
-.product .table-responsive {
-    overflow-x: auto;
-    padding: 0 1rem;
-    
-  }
-  
-  .product .table {
-    width: 100%;
-    max-width: 100%;
-  
-    th,
-    td {
-      text-align: left;
-      padding: 8px;
-      vertical-align: middle;
-  
-      &:first-child {
-        width: 10%;
-      }
-  
-      &:nth-child(2) {
-        width: 20%;
-      }
-  
-      &:nth-child(3),
-      &:nth-child(4),
-      &:nth-child(5) {
-        display: none;
-      }
-    }
-      .table-developer {
-        display: table-cell;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        max-width: 0;
-        width: 1%;
-  
-        &:before {
-          content: 'Developers:';
-          display: inline-block;
-          margin-right: 5px;
-          font-weight: bold;
-        }
-  
-        ul {
-          list-style: none;
-          margin: 0;
-          padding: 0;
-  
-          li {
-            margin-bottom: 5px;
-  
-            &:last-child {
-              margin-bottom: 0;
-            }
-          }
-        }
-      }
-    }
-  
-    tbody tr:hover td {
-      background-color: #f5f5f5;
-    }
-  
-  
-  @media (max-width: 768px) {
-    .product .table thead {
-      display: none;
-    }
-  
-    .product .table tbody tr {
-      display: block;
-      margin-bottom: 20px;
-    }
-  
-    .product .table tbody td {
-      display: block;
-      text-align: right;
-      font-size: 14px;
-  
-      &:before {
-        content: attr(data-th);
-        display: inline-block;
-        margin-right: 5px;
-        font-weight: bold;
-      }
-  
-      &:last-child {
-        border-bottom: 0;
-      }
-    }
-  }
+@import '../../styles/_variables.scss';
+@import '../../styles/_mixins.scss';
+@import '../../styles/_global.scss';
