--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -6,7 +6,8 @@ $color-primary: #11111f;
 $color-primary-light: #2bd2c2;
 $color-secondary: #e8e8ec;
 $color-secondary-light: #ffffff;
-
+$color-red: #ff0000;
+$color-blue: #0000ff;
 /**
 Table
 **/
