--- a/client/src/pages/ProductView/productView.scss
+++ b/client/src/pages/ProductView/productView.scss
@@ -1,36 +1,75 @@
+@import '../../styles/_variables.scss';
+@import '../../styles/_mixins.scss';
+@import '../../styles/_global.scss';
+
+.form-group label {
+  color: $color-primary;
+  font-weight: 600;
+}
+
+.form-control {
+  background-color: $color-secondary;
+  border: 1px solid $color-secondary;
+  color: $color-secondary-light;
+  font-size: 1rem;
+}
+
+.form-developers {
+  margin-bottom: 1rem;
+}
+
+.form-button {
+  margin-top: 1rem;
+}
+
+.btn-add {
+  background-color: $color-secondary;
+  border: 1px solid $color-secondary;
+  color: $color-primary;
+  font-size: 1rem;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+
+  &:hover {
+    background-color: $color-primary;
+    border: 1px solid $color-primary;
+    color: $color-secondary-light;
+  }
+}
+
 @media (min-width: 768px) {
-    .form {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center
-    }
-    
-    .form-group {
-      flex-basis: calc(50% - 1rem);
-    }
-    
-    .form-group label {
-      display: block;
-      margin-bottom: 0.5rem;
-    }
-    
-    .form-group input {
-      width: 100%;
-    }
+  .form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center
   }
-  
-  /* Style the form for screens smaller than 768px */
-  @media (max-width: 767px) {
-    .form-group {
-      margin-bottom: 1rem;
-    }
-    
-    .form-group label {
-      display: block;
-      margin-bottom: 0.5rem;
-    }
-    
-    .form-group input {
-      width: 100%;
-    }
+
+  .form-group {
+    flex-basis: calc(50% - 1rem);
   }
+
+  .form-group label {
+    display: block;
+    margin-bottom: 0.5rem;
+  }
+
+  .form-group input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .form-group {
+    margin-bottom: 1rem;
+  }
+
+  .form-group label {
+    display: block;
+    margin-bottom: 0.5rem;
+  }
+
+  .form-group input {
+    width: 100%;
+  }
+}
