--- a/client/src/pages/ProductList/productList.scss
+++ b/client/src/pages/ProductList/productList.scss
@@ -84,3 +84,15 @@
         flex-direction: column;
     }
 }
+
+.column-width-20 {
+    width: 20%;
+  }
+  
+  .column-width-15 {
+    width: 15%;
+  }
+  
+  .column-width-10 {
+    width: 10%;
+  }
